@@ -44,6 +44,14 @@ SLANG_MODULE(curl);
  * and because those symbols are enums, hacks such as the following are
  * necessary.  This is why enums should not be used in this manner.
  */
+#if CURL_VERSION_GE(7,21,6)
+# define HAVE_CURLOPT_ACCEPT_ENCODING
+#endif
+
+#if CURL_VERSION_GE(7,16,4)
+# define HAVE_CURLOPT_USE_SSL
+#endif
+
 #if CURL_VERSION_LT(7,16,0)
 # define HAVE_CURLOPT_PREQUOTE
 # define HAVE_CURLOPT_SOURCE_PREQUOTE
@@ -630,7 +638,11 @@ static int do_setopt (Easy_Type *ez, CURLoption opt, int nargs)
 	/* HTTP options */
       case CURLOPT_AUTOREFERER:
 	return set_long_opt (ez, opt, nargs, 1, 1L);
+#ifdef HAVE_CURLOPT_ACCEPT_ENCODING
+      case CURLOPT_ACCEPT_ENCODING:
+#else
       case CURLOPT_ENCODING:
+#endif
 	return set_string_opt (ez, opt, nargs);
 
       case CURLOPT_FOLLOWLOCATION:
@@ -701,7 +713,11 @@ static int do_setopt (Easy_Type *ez, CURLoption opt, int nargs)
       case CURLOPT_FTP_RESPONSE_TIMEOUT:
 	return set_long_opt (ez, opt, nargs, 1, 1L);
 
-      case CURLOPT_FTP_SSL:
+#ifdef HAVE_CURLOPT_USE_SSL
+      case CURLOPT_USE_SSL:
+#else
+      case CURLOPT_FTP_SSL: /* deprecated. */
+#endif
 	return set_long_opt (ez, opt, nargs, 0, 0L);   /* FIXME: specific values */
 
 #ifdef HAVE_CURLOPT_SOURCE_URL
@@ -1648,6 +1664,9 @@ static SLang_IConstant_Type Module_IConstants [] =
    MAKE_ICONSTANT("CURLOPT_HTTPAUTH", CURLOPT_HTTPAUTH),
    MAKE_ICONSTANT("CURLOPT_PROXYAUTH", CURLOPT_PROXYAUTH),
    MAKE_ICONSTANT("CURLOPT_AUTOREFERER", CURLOPT_AUTOREFERER),
+#ifdef HAVE_CURLOPT_ACCEPT_ENCODING
+   MAKE_ICONSTANT("CURLOPT_ACCEPT_ENCODING", CURLOPT_ACCEPT_ENCODING),
+#endif
    MAKE_ICONSTANT("CURLOPT_ENCODING", CURLOPT_ENCODING),
    MAKE_ICONSTANT("CURLOPT_FOLLOWLOCATION", CURLOPT_FOLLOWLOCATION),
    MAKE_ICONSTANT("CURLOPT_UNRESTRICTED_AUTH", CURLOPT_UNRESTRICTED_AUTH),
@@ -1683,6 +1702,9 @@ static SLang_IConstant_Type Module_IConstants [] =
    MAKE_ICONSTANT("CURLOPT_FTP_CREATE_MISSING_DIRS", CURLOPT_FTP_CREATE_MISSING_DIRS),
    MAKE_ICONSTANT("CURLOPT_FTP_RESPONSE_TIMEOUT", CURLOPT_FTP_RESPONSE_TIMEOUT),
    MAKE_ICONSTANT("CURLOPT_FTP_SSL", CURLOPT_FTP_SSL),
+#ifdef HAVE_CURLOPT_USE_SSL
+   MAKE_ICONSTANT("CURLOPT_USE_SSL", CURLOPT_USE_SSL),
+#endif
 #ifdef HAVE_CURLOPT_SOURCE_URL
    MAKE_ICONSTANT("CURLOPT_SOURCE_URL", CURLOPT_SOURCE_URL),
 #endif
@@ -1744,6 +1766,13 @@ static SLang_IConstant_Type Module_IConstants [] =
    MAKE_ICONSTANT("CURLOPT_PRIVATE", CURLOPT_PRIVATE),
    MAKE_ICONSTANT("CURLOPT_SHARE", CURLOPT_SHARE),
    MAKE_ICONSTANT("CURLOPT_TELNETOPTIONS", CURLOPT_TELNETOPTIONS),
+
+#ifdef HAVE_CURLOPT_USE_SSL
+   MAKE_ICONSTANT("CURLUSESSL_NONE", CURLUSESSL_NONE),
+   MAKE_ICONSTANT("CURLUSESSL_TRY", CURLUSESSL_TRY),
+   MAKE_ICONSTANT("CURLUSESSL_CONTROL", CURLUSESSL_CONTROL),
+   MAKE_ICONSTANT("CURLUSESSL_ALL", CURLUSESSL_ALL),
+#endif
 
    MAKE_ICONSTANT("CURL_GLOBAL_ALL", CURL_GLOBAL_ALL),
    MAKE_ICONSTANT("CURL_GLOBAL_SSL", CURL_GLOBAL_SSL),
@@ -1851,6 +1880,9 @@ static SLang_IConstant_Type Module_IConstants [] =
    MAKE_ICONSTANT("CURLE_SSL_ENGINE_INITFAILED", CURLE_SSL_ENGINE_INITFAILED),
 #if CURL_VERSION_GE(7,14,0)
    MAKE_ICONSTANT("CURLE_LOGIN_DENIED", CURLE_LOGIN_DENIED),
+#endif
+#ifdef HAVE_CURLOPT_USE_SSL
+   MAKE_ICONSTANT("CURLE_USE_SSL_FAILED", CURLE_USE_SSL_FAILED),
 #endif
    SLANG_END_ICONST_TABLE
 };
